--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/20-form.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/20-form.html
@@ -14,7 +14,9 @@
     <!-- interactive form where users can input data, such as login details, search queries, or feedback. -->
 
     <form  id="frm" name="frm" action="welcom.html" enctype="multipart/form-data" method="post">
+<fieldset>
 
+    <legend>Register Form</legend>
         <!-- For Name -->
         <label>Enter name </label>
         <input type="text" placeholder="Enter your name" required>
@@ -57,6 +59,8 @@
         <br><br>
 
         <input type="submit" value="submit">
+
+    </fieldset>
     </form>
     
 </body>
