22/02/2025 all data uploaded

--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Google-map/tops.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Google-map/tops.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     
-    <div>
-    <h1 align="center">This is a tops tachnology address</h1>
-    <hr>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2209.607664368241!2d70.77489670896766!3d22.290163517545782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca248c77c099%3A0xdf5ac10af64ac8ee!2sTOPS%20Technologies!5e1!3m2!1sen!2sin!4v1739275265727!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="200px"></iframe>
+    <div style="width: 60%; height: auto; margin: auto;">
+        <h1>Get in touch with Google Map!</h1>
+        <hr  style="width: 30%;" align="left" />
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3691.6799314943046!2d70.77238027412226!3d22.29011104326695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3959ca248c77c099%3A0xdf5ac10af64ac8ee!2sTOPS%20Technologies!5e0!3m2!1sen!2sin!4v1739244025856!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-
 </body>
 </html>
