--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Map-360d/d-mart.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Map-360d/d-mart.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Relince - mall - 360 </title>
+    <title>D-Mart - 360 </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
     
-    <div align="center" width="300px">
-    <h1 align="center">Most famous shopping mall</h1>
-    <hr width="300px">
+    <div style="width: 80%; height: auto; margin: auto; margin-top: 8%;">
+    <h1>360 degree View of D-Mart</h1>
+    <button type="button" style="width: 100px; height: auto; padding: 10px; background-color: green; color: white; border: none;">Previous</button>
+    <button type="button" style="width: 100px; height: auto; padding: 10px; background-color: green;color:white; border: none; float: right;">Next</button>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!4v1739276354095!6m8!1m7!1sV6UQeevTuIS2dC3eDGl4Uw!2m2!1d22.27911305912994!2d70.77671169769245!3f55.71137769490861!4f0!5f0.7820865974627469" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <hr>
+
+    <p>Find 360 degree view of your Address.</p>
+    <hr>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!4v1739276354095!6m8!1m7!1sV6UQeevTuIS2dC3eDGl4Uw!2m2!1d22.27911305912994!2d70.77671169769245!3f55.71137769490861!4f0!5f0.7820865974627469" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
 </body>
 </html>
