--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/W3School/html-intro.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/W3School/html-intro.html
@@ -10,12 +10,23 @@
 </head>
 <body>
     
-    <div>
+    <div style="width: 80%; height: auto; margin: auto; margin-top: 8%;">
 
-        <h1></h1>
-
-
-
+        <h1>HTML Introduction</h1>
+        <button type="button" style="width: 100px; height: auto; padding: 10px; background-color: green;color:white; border: none;">Previous</button>
+        <button type="button" style="width: 100px; height: auto; padding: 10px; background-color: green;color:white; border: none; float: right;">Next</button>
+        <hr>
+        <p>HTML is the standard markup language for creating Web pages.</p>
+        <hr>
+        <h1>What is HTML?</h1>
+        <ul>
+            <li>HTML stands for Hyper Text Markup Language</li>
+            <li>HTML is the standard markup language for creating Web pages</li>
+            <li>HTML describes the structure of a Web page</li>
+            <li>HTML consists of a series of elements</li>
+            <li>HTML elements tell the browser how to display the content</li>
+            <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.</li>
+        </ul>
 
     </div>
     
