--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/9-cite.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/9-cite.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- <cite>   </cite> -->
-    <!-- <cite> tag is also similer to Italic / em tag <i> / <em> -->
+    <!-- <cite> tag is also similer to Italic <i> / em tag <em> -->
     
     <p>Welcom to my page <cite>I'm a divyesh</cite>, a passionate coder on a journey to <cite>master full-stack development with Java</cite>. Dedicated to learning, problem-solving, and building real-world projects. Focused on consistency, self-improvement, and productivity. </p>
 
