--- a/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Google-map/relaince.html
+++ b/Website - Designing/Module - 1 HTML-HTML5/Body - Tag/Paired-Tag/Iframe/Google-map/relaince.html
@@ -9,10 +9,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
-    <div>
-    <h1 align="center">relince mall </h1>
-    <hr width="200px">
+
+    <div style="width: 60%; height: auto; margin: auto;">
+
+    <h1> Get in touch with Google Map!</h1>
+    <hr style ="width: 30%" align="left">
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3709.3835903320673!2d70.77714184321127!3d22.27926879671847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395927d878f13b95%3A0x2dc90395b210b8d9!2sReliance%20Mall!5e1!3m2!1sen!2sin!4v1739275461171!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
